--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ lib/
 lib64/
 parts/
 sdist/
-idea/
 var/
 wheels/
 pip-wheel-metadata/
@@ -128,3 +127,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.idea/*
